# meet2ui

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  apply_settings.py  main.py  meet2ui.spec  pyproject.toml  pytest.ini  requirements.txt
config/: presets.py
core/: camera.py  tracker.py  v4l2.py
tests/: conftest.py  test_camera.py  test_constants.py  test_presets.py  test_tracker.py  test_v4l2.py
ui/: app.py  controls.py  preview.py  theme.py
utils/: constants.py
