[project]
name = "meet2ui"
version = "0.1.0"
description = "Compact camera control app with face tracking"
requires-python = ">=3.9"
dependencies = [
    "dearpygui>=1.9.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.9",
    "pre-commit>=3.0.0",
]

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "SIM117", # nested with statements (required for DearPyGui context managers)
]

[tool.ruff.lint.isort]
known-first-party = ["core", "ui", "config", "utils"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
